fix login crash + update Header

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sciago</string>
+    <string name="app_name">SCIAGO</string>
     <string name="slogan_sciago">La recherche autrement</string>
 
     <!-- Strings related to login -->
