--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <string name="title_activity_bottom_bar_activity">BottomBarActivity</string>
     <string name="title_activity_bottom_bar_fragment">BottomBarFragment</string>
 
+    <string name="fund_title_header">Annuaire collaboratif des financements</string>
+    <string name="fund_btn_recherche">Rechercher</string>
+    <string name="fund_btn_rechercheAvancee">Recherche avancée</string>
+
     <string name="connect_title_header">Base de chercheurs</string>
     <string name="connect_btn_recherche">rechercher</string>
     <string name="connect_btn_rechercheAvancee">Recherche avancé</string>
